# ML-in-Practice-I

./: .gitignore  1Dclassification.ipynb  DT and bagging.ipynb  ML in practice.odp  Parameter_significance.ipynb  README.md  calculations.ipynb  content.txt  main.py  pyproject.toml  read_data.ipynb  tasks.py
